crates/math-core/tests/snapshots/error_test__kern_two_dots.snap
---
source: crates/math-core/tests/error_test.rs
expression: "x\\kern1.2.3em y"
---
Error: Expected length with units, found "1.2.3em".
   ╭─[ <input>:1:7 ]
   │
 1 │ x\kern1.2.3em y
   │       ───┬───  
   │          ╰───── expected length here
───╯
